--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,210 @@
-@media (min-width: 321px) and (max-width: 480px) {
+@media (max-width: 576px) {
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    outline: none;
+    border: none;
+    text-decoration: none;
+    text-transform: uppercase;
+  }
+  .container {
+    width: 100vw;
+    min-height: 70vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 10px;
+    font-size: 11px;
+  }
+  .container form {
+    height: 80%;
+    width: 95%;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 10px 15px rgb(0, 0, 0, 0.1);
+    padding: 10px;
+    padding-top: 60px;
+  }
+  .container form .input-box {
+    margin-top: 20px;
+  }
+  .container form .input-box span {
+    display: block;
+    color: #999;
+    padding-bottom: 5px;
+  }
+  .container form .input-box input {
+    width: 100%;
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid rgb(0, 0, 0, 0.3);
+    color: #444;
+  }
+  .container form .input-box select {
+    width: 100%;
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid rgb(0, 0, 0, 0.3);
+    color: #444;
+  }
+  .container form .flexbox {
+    display: flex;
+    gap: 15px;
+  }
+  .container form .flexbox .input-box {
+    flex: 1 1 150px;
+  }
+  .container form .submit-btn {
+    width: 100%;
+    background: linear-gradient(45deg, blueviolet, #0357ee);
+    margin-top: 20px;
+    padding: 10px;
+    border-radius: 10px;
+    color: #fff;
+    cursor: pointer;
+    transition: 0.2s linear;
+  }
+  .container form .submit-btn:hover {
+    letter-spacing: 2px;
+    opacity: 0.8;
+  }
+  .container .card-container {
+    margin-bottom: -160px;
+    position: relative;
+    width: 400px;
+    height: 250px;
+  }
+  .container .card-container .card-front {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    background: linear-gradient(45deg, #0357ee, #0357ee);
+    border-radius: 5px;
+    backface-visibility: hidden;
+    box-shadow: 0 15px 25px rgb(0, 0, 0, 0.2);
+    padding: 20px;
+    transform: perspective(1000px) rotateY(0deg);
+    transition: transform 0.4s ease-out;
+  }
+  .container .card-container .card-front .card-images {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 10px;
+  }
+  .container .card-container .card-front .card-images .chip-image {
+    height: 40px;
+  }
+  .container .card-container .card-front .card-images .visa-logo {
+    height: 50px;
+  }
+  .container .card-container .card-front .card-number-box {
+    padding: 30px 0;
+    font-size: 22px;
+    color: #fff;
+  }
+  .container .card-container .card-front .card-holder-name-box {
+    display: flex;
+  }
+  .container
+    .card-container
+    .card-front
+    .card-holder-name-box
+    .box:nth-child(1) {
+    margin-right: auto;
+  }
+  .container .card-container .card-front .card-holder-name-box .box {
+    font-size: 14px;
+    color: #fff;
+  }
+  .visa-logo-div {
+    display: flex;
+    justify-content: end;
+  }
+  .visa-logo-div img {
+    height: 50px;
+  }
+  .money-point-logo {
+    height: 40px;
+    border-radius: 4px;
+  }
+  .container .card-container .card-back {
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(45deg, blueviolet, #0357ee);
+    border-radius: 5px;
+    padding: 20px 0;
+    text-align: right;
+    backface-visibility: hidden;
+    box-shadow: 0 15px 25px rgb(0, 0, 0, 0.2);
+    transform: perspective(1000px) rotateY(180deg);
+    transition: transform 0.4s ease-out;
+  }
+  .container .card-container .card-back .strip {
+    background-color: #000;
+    width: 100%;
+    margin: 10px 0;
+    height: 50px;
+  }
+  .container .card-container .card-back .box {
+    padding: 0 20px;
+  }
+  .container .card-container .card-back .box span {
+    color: #fff;
+    font-size: 15px;
+  }
+  .container .card-container .card-back .box .cvv-box {
+    height: 50px;
+    padding: 10px;
+    margin-top: 5px;
+    color: #333;
+    background-color: #fff;
+    border-radius: 5px;
+    width: 100%;
+  }
+  .container .card-container .card-back .box .visa-logo-card-back {
+    margin-top: 30px;
+    height: 30px;
+  }
+  .card-logo {
+    height: 30px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin: -10px auto -10px;
+  }
+  .success-message {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #4caf50;
+    color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    z-index: 999;
+  }
+  footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 10px;
+  }
+  #footer-text {
+    text-transform: lowercase;
+  }
+}
+
+@media (min-width: 577px) and (max-width: 992px) {
   * {
     margin: 0;
     padding: 0;
@@ -14,244 +220,392 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-bottom: 10px;
+    padding-bottom: 15px;
   }
   .container form {
-    height: 80%;
-    width: 90%;
+    width: 600px;
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 10px 15px rgb(0, 0, 0, 0.1);
+    padding: 20px;
+    padding-top: 160px;
+  }
+  .container form .input-box {
+    margin-top: 20px;
+  }
+  .container form .input-box span {
+    display: block;
+    color: #999;
+    padding-bottom: 5px;
+  }
+  .container form .input-box input {
+    width: 100%;
     padding: 10px;
-    padding-top: 50px;
+    border-radius: 10px;
+    border: 1px solid rgb(0, 0, 0, 0.3);
+    color: #444;
+  }
+  .container form .input-box select {
+    width: 100%;
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid rgb(0, 0, 0, 0.3);
+    color: #444;
+  }
+  .container form .flexbox {
+    display: flex;
+    gap: 15px;
+  }
+  .container form .flexbox .input-box {
+    flex: 1 1 150px;
+  }
+  .container form .submit-btn {
+    width: 100%;
+    background: linear-gradient(45deg, blueviolet, #0357ee);
+    margin-top: 20px;
+    padding: 10px;
+    border-radius: 10px;
+    color: #fff;
+    cursor: pointer;
+    transition: 0.2s linear;
+  }
+  .container form .submit-btn:hover {
+    letter-spacing: 2px;
+    opacity: 0.8;
+  }
+  .container .card-container {
+    margin-bottom: -160px;
+    position: relative;
+    width: 400px;
+    height: 250px;
+  }
+  .container .card-container .card-front {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    background: linear-gradient(45deg, #0357ee, #0357ee);
+    border-radius: 5px;
+    backface-visibility: hidden;
+    box-shadow: 0 15px 25px rgb(0, 0, 0, 0.2);
+    padding: 20px;
+    transform: perspective(1000px) rotateY(0deg);
+    transition: transform 0.4s ease-out;
+  }
+  .container .card-container .card-front .card-images {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 10px;
+  }
+  .container .card-container .card-front .card-images .chip-image {
+    height: 40px;
+  }
+  .container .card-container .card-front .card-images .visa-logo {
+    height: 50px;
+  }
+  .container .card-container .card-front .card-number-box {
+    padding: 30px 0;
+    font-size: 22px;
+    color: #fff;
+  }
+  .container .card-container .card-front .card-holder-name-box {
+    display: flex;
+  }
+  .container
+    .card-container
+    .card-front
+    .card-holder-name-box
+    .box:nth-child(1) {
+    margin-right: auto;
+  }
+  .container .card-container .card-front .card-holder-name-box .box {
+    font-size: 14px;
+    color: #fff;
+  }
+  .visa-logo-div {
+    display: flex;
+    justify-content: end;
+  }
+  .visa-logo-div img {
+    height: 50px;
+  }
+  .money-point-logo {
+    height: 40px;
+    border-radius: 4px;
+  }
+  .container .card-container .card-back {
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(45deg, blueviolet, #0357ee);
+    border-radius: 5px;
+    padding: 20px 0;
+    text-align: right;
+    backface-visibility: hidden;
+    box-shadow: 0 15px 25px rgb(0, 0, 0, 0.2);
+    transform: perspective(1000px) rotateY(180deg);
+    transition: transform 0.4s ease-out;
+  }
+  .container .card-container .card-back .strip {
+    background-color: #000;
+    width: 100%;
+    margin: 10px 0;
+    height: 50px;
+  }
+  .container .card-container .card-back .box {
+    padding: 0 20px;
+  }
+  .container .card-container .card-back .box span {
+    color: #fff;
+    font-size: 15px;
+  }
+  .container .card-container .card-back .box .cvv-box {
+    height: 50px;
+    padding: 10px;
+    margin-top: 5px;
+    color: #333;
+    background-color: #fff;
+    border-radius: 5px;
+    width: 100%;
+  }
+  .container .card-container .card-back .box .visa-logo-card-back {
+    margin-top: 30px;
+    height: 30px;
+  }
+  .card-logo {
+    height: 30px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin: -10px auto -10px;
+  }
+  .success-message {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #4caf50;
+    color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    z-index: 999;
+  }
+  footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 10px;
+  }
+  #footer-text {
+    text-transform: lowercase;
   }
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  outline: none;
-  border: none;
-  text-decoration: none;
-  text-transform: uppercase;
-}
-
-.container {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding-bottom: 30px;
-}
-
-.container form {
-  width: 600px;
-  background-color: #fff;
-  border-radius: 5px;
-  box-shadow: 0 10px 15px rgb(0, 0, 0, 0.1);
-  padding: 20px;
-  padding-top: 160px;
-}
-
-.container form .input-box {
-  margin-top: 20px;
-}
-
-.container form .input-box span {
-  display: block;
-  color: #999;
-  padding-bottom: 5px;
-}
-
-.container form .input-box input {
-  width: 100%;
-  padding: 10px;
-  border-radius: 10px;
-  border: 1px solid rgb(0, 0, 0, 0.3);
-  color: #444;
-}
-
-.container form .input-box select {
-  width: 100%;
-  padding: 10px;
-  border-radius: 10px;
-  border: 1px solid rgb(0, 0, 0, 0.3);
-  color: #444;
-}
-
-.container form .flexbox {
-  display: flex;
-  gap: 15px;
-}
-
-.container form .flexbox .input-box {
-  flex: 1 1 150px;
-}
-
-.container form .submit-btn {
-  width: 100%;
-  background: linear-gradient(45deg, blueviolet, #0357ee);
-  margin-top: 20px;
-  padding: 10px;
-  border-radius: 10px;
-  color: #fff;
-  cursor: pointer;
-  transition: 0.2s linear;
-}
-
-.container form .submit-btn:hover {
-  letter-spacing: 2px;
-  opacity: 0.8;
-}
-
-.container .card-container {
-  margin-bottom: -160px;
-  position: relative;
-  width: 400px;
-  height: 250px;
-}
-
-.container .card-container .card-front {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  background: linear-gradient(45deg, #0357ee, #0357ee);
-  border-radius: 5px;
-  backface-visibility: hidden;
-  box-shadow: 0 15px 25px rgb(0, 0, 0, 0.2);
-  padding: 20px;
-  transform: perspective(1000px) rotateY(0deg);
-  transition: transform 0.4s ease-out;
-}
-
-.container .card-container .card-front .card-images {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-top: 10px;
-}
-
-.container .card-container .card-front .card-images .chip-image {
-  height: 40px;
-}
-
-.container .card-container .card-front .card-images .visa-logo {
-  height: 50px;
-}
-
-.container .card-container .card-front .card-number-box {
-  padding: 30px 0;
-  font-size: 22px;
-  color: #fff;
-}
-
-.container .card-container .card-front .card-holder-name-box {
-  display: flex;
-}
-
-.container .card-container .card-front .card-holder-name-box .box:nth-child(1) {
-  margin-right: auto;
-}
-
-.container .card-container .card-front .card-holder-name-box .box {
-  font-size: 14px;
-  color: #fff;
-}
-
-.visa-logo-div {
-  display: flex;
-  justify-content: end;
-}
-
-.visa-logo-div img {
-  height: 50px;
-}
-
-.money-point-logo {
-  height: 40px;
-  border-radius: 4px;
-}
-
-.container .card-container .card-back {
-  position: absolute;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  background: linear-gradient(45deg, blueviolet, #0357ee);
-  border-radius: 5px;
-  padding: 20px 0;
-  text-align: right;
-  backface-visibility: hidden;
-  box-shadow: 0 15px 25px rgb(0, 0, 0, 0.2);
-  transform: perspective(1000px) rotateY(180deg);
-  transition: transform 0.4s ease-out;
-}
-
-.container .card-container .card-back .strip {
-  background-color: #000;
-  width: 100%;
-  margin: 10px 0;
-  height: 50px;
-}
-
-.container .card-container .card-back .box {
-  padding: 0 20px;
-}
-
-.container .card-container .card-back .box span {
-  color: #fff;
-  font-size: 15px;
-}
-
-.container .card-container .card-back .box .cvv-box {
-  height: 50px;
-  padding: 10px;
-  margin-top: 5px;
-  color: #333;
-  background-color: #fff;
-  border-radius: 5px;
-  width: 100%;
-}
-
-.container .card-container .card-back .box .visa-logo-card-back {
-  margin-top: 30px;
-  height: 30px;
-}
-
-.card-logo {
-  height: 30px;
-  background-size: contain;
-  background-repeat: no-repeat;
-  margin: -10px auto -10px;
-}
-
-.success-message {
-  display: none;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: #4caf50;
-  color: #fff;
-  padding: 20px;
-  border-radius: 5px;
-  text-align: center;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  z-index: 999;
-}
-
-footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-bottom: 10px;
-}
-
-#footer-text {
-  text-transform: lowercase;
+@media (min-width: 993px) {
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    outline: none;
+    border: none;
+    text-decoration: none;
+    text-transform: uppercase;
+  }
+  .container {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 30px;
+  }
+  .container form {
+    width: 600px;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 10px 15px rgb(0, 0, 0, 0.1);
+    padding: 20px;
+    padding-top: 160px;
+  }
+  .container form .input-box {
+    margin-top: 20px;
+  }
+  .container form .input-box span {
+    display: block;
+    color: #999;
+    padding-bottom: 5px;
+  }
+  .container form .input-box input {
+    width: 100%;
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid rgb(0, 0, 0, 0.3);
+    color: #444;
+  }
+  .container form .input-box select {
+    width: 100%;
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid rgb(0, 0, 0, 0.3);
+    color: #444;
+  }
+  .container form .flexbox {
+    display: flex;
+    gap: 15px;
+  }
+  .container form .flexbox .input-box {
+    flex: 1 1 150px;
+  }
+  .container form .submit-btn {
+    width: 100%;
+    background: linear-gradient(45deg, blueviolet, #0357ee);
+    margin-top: 20px;
+    padding: 10px;
+    border-radius: 10px;
+    color: #fff;
+    cursor: pointer;
+    transition: 0.2s linear;
+  }
+  .container form .submit-btn:hover {
+    letter-spacing: 2px;
+    opacity: 0.8;
+  }
+  .container .card-container {
+    margin-bottom: -160px;
+    position: relative;
+    width: 400px;
+    height: 250px;
+  }
+  .container .card-container .card-front {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    background: linear-gradient(45deg, #0357ee, #0357ee);
+    border-radius: 5px;
+    backface-visibility: hidden;
+    box-shadow: 0 15px 25px rgb(0, 0, 0, 0.2);
+    padding: 20px;
+    transform: perspective(1000px) rotateY(0deg);
+    transition: transform 0.4s ease-out;
+  }
+  .container .card-container .card-front .card-images {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 10px;
+  }
+  .container .card-container .card-front .card-images .chip-image {
+    height: 40px;
+  }
+  .container .card-container .card-front .card-images .visa-logo {
+    height: 50px;
+  }
+  .container .card-container .card-front .card-number-box {
+    padding: 30px 0;
+    font-size: 22px;
+    color: #fff;
+  }
+  .container .card-container .card-front .card-holder-name-box {
+    display: flex;
+  }
+  .container
+    .card-container
+    .card-front
+    .card-holder-name-box
+    .box:nth-child(1) {
+    margin-right: auto;
+  }
+  .container .card-container .card-front .card-holder-name-box .box {
+    font-size: 14px;
+    color: #fff;
+  }
+  .visa-logo-div {
+    display: flex;
+    justify-content: end;
+  }
+  .visa-logo-div img {
+    height: 50px;
+  }
+  .money-point-logo {
+    height: 40px;
+    border-radius: 4px;
+  }
+  .container .card-container .card-back {
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(45deg, blueviolet, #0357ee);
+    border-radius: 5px;
+    padding: 20px 0;
+    text-align: right;
+    backface-visibility: hidden;
+    box-shadow: 0 15px 25px rgb(0, 0, 0, 0.2);
+    transform: perspective(1000px) rotateY(180deg);
+    transition: transform 0.4s ease-out;
+  }
+  .container .card-container .card-back .strip {
+    background-color: #000;
+    width: 100%;
+    margin: 10px 0;
+    height: 50px;
+  }
+  .container .card-container .card-back .box {
+    padding: 0 20px;
+  }
+  .container .card-container .card-back .box span {
+    color: #fff;
+    font-size: 15px;
+  }
+  .container .card-container .card-back .box .cvv-box {
+    height: 50px;
+    padding: 10px;
+    margin-top: 5px;
+    color: #333;
+    background-color: #fff;
+    border-radius: 5px;
+    width: 100%;
+  }
+  .container .card-container .card-back .box .visa-logo-card-back {
+    margin-top: 30px;
+    height: 30px;
+  }
+  .card-logo {
+    height: 30px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin: -10px auto -10px;
+  }
+  .success-message {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #4caf50;
+    color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    z-index: 999;
+  }
+  footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 10px;
+  }
+  #footer-text {
+    text-transform: lowercase;
+  }
 }
